# Stitch

./: .gitignore  README.md  pyproject.toml
src/stitch/: __init__.py  apk_utils.py  common.py  patcher.py  stitch.py
src/stitch/artifactory_generator/: generate_artifactory.py
