[project]
name = "stitch-test"
version = "0.0.1"
description = ""
authors = [
    { name = "Alon Schwartzblat", email = "alon.ponch@gmail.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "PyYAML",
    "androguard"
]
[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["bin/*.jar"]